--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="#contact">Contacto</a></li>
     </nav>
     <section id="welcome-section">
-        <img src="https://i.ibb.co/FqhQY0Tp/Lenin.png" alt="Lenin de cuerpo completo mirando seductoramente">
+        <img loading="lazy" src="https://i.ibb.co/FqhQY0Tp/Lenin.png" alt="Lenin de cuerpo completo mirando seductoramente">
         <div>
             <h1>Lenin Rojas Sánchez</h1>
             <i>Desarrolador web</i>
@@ -25,39 +25,39 @@
         <h2 class="subtitulo-proyectos">Proyectos destacados</h2>
         <article class="project-tile">
             <div>
-                <img src="https://cdn-icons-png.flaticon.com/512/919/919825.png" class="tech-circle">
-                <img src="https://adware-technologies.s3.amazonaws.com/uploads/technology/thumbnail/20/express-js.png" class="tech-circle">
-                <img src="https://www.coretech.it/_public/img/video/icon/ApirestFul.png" class="tech-circle">
+                <img loading="lazy" src="https://cdn-icons-png.flaticon.com/512/919/919825.png" class="tech-circle">
+                <img loading="lazy" src="https://adware-technologies.s3.amazonaws.com/uploads/technology/thumbnail/20/express-js.png" class="tech-circle">
+                <img loading="lazy" src="https://www.coretech.it/_public/img/video/icon/ApirestFul.png" class="tech-circle">
             </div>
-            <img src="https://i.ibb.co/G34pxJDz/image.png" class="project-image">
-            <a href="https://lenindroid.github.io/lenintoys/" target="_blank">Lenintoys Cyberbattles</a>
+            <img loading="lazy" src="https://i.ibb.co/G34pxJDz/image.png" class="project-image">
+            <a href="https://lenindroid.github.io/lenintoys/" target="_blank" class="nombre-proyecto">Lenintoys Cyberbattles</a>
         </article>
 
         <article class="project-tile">
             <div>
-                <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748_1280.png" class="tech-circle">
-                <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_1280.png" class="tech-circle">
+                <img loading="lazy" src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748_1280.png" class="tech-circle">
+                <img loading="lazy" src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_1280.png" class="tech-circle">
             </div>
-            <img src="https://i.ibb.co/KzK5D1tG/image.png" class="project-image">
-            <a href="https://lenindroid.github.io/cristiansball/index.html" target="_blank">Cristian's Ball</a>
+            <img loading="lazy" src="https://i.ibb.co/KzK5D1tG/image.png" class="project-image">
+            <a href="https://lenindroid.github.io/cristiansball/index.html" target="_blank" class="nombre-proyecto">Cristian's Ball</a>
         </article>
 
         <article class="project-tile">
             <div>
-                <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748_1280.png" class="tech-circle">
-                <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_1280.png" class="tech-circle">
+                <img loading="lazy" src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748_1280.png" class="tech-circle">
+                <img loading="lazy" src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_1280.png" class="tech-circle">
             </div>
-            <img src="https://i.ibb.co/YBd02W1M/image.png" alt="image" class="project-image">
-            <a href="https://lenindroid.github.io/Ada-Lovelace-tribute/" target="_blank">Ada Lovelace Tribute Page</a>
+            <img loading="lazy" src="https://i.ibb.co/YBd02W1M/image.png" alt="image" class="project-image">
+            <a href="https://lenindroid.github.io/Ada-Lovelace-tribute/" target="_blank" class="nombre-proyecto">Ada Lovelace Tribute Page</a>
         </article>
 
         <article class="project-tile">
             <div>
-                <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748_1280.png" class="tech-circle">
-                <img src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_1280.png" class="tech-circle">
+                <img loading="lazy" src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582748_1280.png" class="tech-circle">
+                <img loading="lazy" src="https://cdn.pixabay.com/photo/2017/08/05/11/16/logo-2582747_1280.png" class="tech-circle">
             </div>
-            <img src="https://i.ibb.co/TXSg0Qk/image.png" alt="image" class="project-image">
-            <a href="https://lenindroid.github.io/casio-py/" target="_blank">Product Landing Page</a>
+            <img loading="lazy" src="https://i.ibb.co/TXSg0Qk/image.png" alt="image" class="project-image">
+            <a href="https://lenindroid.github.io/casio-py/" target="_blank" class="nombre-proyecto">Product Landing Page</a>
         </article>
     </section>
 
@@ -67,25 +67,23 @@
             <h3>Envíame un correo electrónico</h3>
         </div>
         <div>
-            <form method="post" action="">
-                <label for="nombre">Nombre completo</label>
+            <form action="https://formspree.io/f/xgvaygvb" method="POST">
+                <label for="name">Nombre completo</label>
                 <label for="email">Email</label>
-                <input type="text" name="nombre" autocomplete="off" required>
+                <input type="text" name="name" autocomplete="off" required>
                 <input type="email" name="email" autocomplete="off" required>
-                <label for="asunto" autocomplete="off">¿Qué necesitas?</label>
-                <textarea name="asunto"></textarea>
+                <label for="message" autocomplete="off">¿Qué necesitas?</label>
+                <textarea name="message" required></textarea>
                 <input type="submit" value="Enviar"/>
             </form>
-            <img>
         </div>
     </section>
 
     <footer>
         <ul>
-            <li><a id="profile-link" href="https://github.com/Lenindroid" target="_blank">GitHub</a></li>
-            <li><a href="https://www.youtube.com/@EllaboratoriodeLenin-bq4dw" target="_blank">YouTube</a></li>
+            <li><a id="profile-link" href="https://github.com/Lenindroid" target="_blank" class="redes-sociales">GitHub</a></li>
+            <li><a href="https://www.youtube.com/@EllaboratoriodeLenin-bq4dw" target="_blank" class="redes-sociales">YouTube</a></li>
         </ul>
-        <p>Me quieren joder. No van a poder.</p>
     </footer>
 </body>
 </html>
